--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "Marshall Lanners",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.14.0",
+    "jsonwebtoken": "^8.3.0",
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
     "sqlite3": "^4.0.3"
