--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Testing Sprint Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "(knex migrate:rollback && knex migrate:latest) && jest --watch --verbose",
+    "test": "(knex migrate:rollback && knex migrate:latest && knex seed:run) && NODE_ENV=test jest --verbose --watch",
     "start": "nodemon server.js"
   },
   "keywords": [],
