--- a/notes/package.json
+++ b/notes/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
+    "react-select": "^2.1.1",
     "styled-components": "^4.0.2",
     "yarn": "^1.10.1"
   },
